# API_DOC/swagger_server/models/__init__.py
@@ -4,5 +4,8 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.campaign import Campaign
+from swagger_server.models.campaign_fetcher import CampaignFetcher
+from swagger_server.models.delete import Delete
+from swagger_server.models.patch import Patch
 from swagger_server.models.reporter import Reporter
 from swagger_server.models.tweet import Tweet
